<resources>
    <string name="app_name">eShop</string>
    <string name="podtitle">Laptop3000</string>
    <string name="podprice">300$</string>
    <string name="ipdesc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="buy">Add to cart</string>
    <string name="product_of_the_day_image">Product of the day image</string>
    <string name="product_of_the_day">Product of the day</string>
    <string name="open_menu">open menu</string>
    <string name="laptops">Laptops</string>
    <string name="consoles">Consoles</string>
    <string name="phones">Phones</string>
    <string name="console3000">Console3000</string>
    <string name="phone3000">Phone3000</string>
    <string name="laptop3000">Laptop3000</string>
    <string name="eshop">eShop</string>
    <string name="console2000">Console2000</string>
    <string name="_200">200$</string>
    <string name="console1000">Console1000</string>
    <string name="_100">100$</string>
    <string name="console">Console</string>
    <string name="_50">50$</string>
    <string name="laptop2000">Laptop2000</string>
    <string name="laptop1000">Laptop1000</string>
    <string name="laptop">Laptop</string>
    <string name="phone2000">Phone2000</string>
    <string name="phone1000">Phone1000</string>
    <string name="phone">Phone</string>
    <string name="buy_now">Buy now</string>
    <string name="your_total_price_is">Your total price is:</string>
    <string name="remove_all_items">Remove all items</string>
</resources>