<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/cart"
        android:title="@string/laptops"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_baseline_shopping_cart_24"
        />
    <item
        android:id="@+id/laptops"
        android:title="@string/laptops"
        app:showAsAction="never"
        android:icon="@drawable/ic_baseline_menu_24"
        />

    <item
        android:id="@+id/consoles"
        android:title="@string/consoles"
        app:showAsAction="never"
        android:icon="@drawable/ic_baseline_menu_24"
        />

    <item
        android:id="@+id/phones"
        android:title="@string/phones"
        app:showAsAction="never"
        android:icon="@drawable/ic_baseline_menu_24"
        />
</menu>