<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">
    <androidx.appcompat.widget.Toolbar
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/openMenu"
        style="@style/openMenu"
        />
    <TextView
        android:id="@+id/podname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/podtitle"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/podprice"
        app:layout_constraintHorizontal_bias="0.307"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/podimage"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/podimage"
        android:layout_width="324dp"
        android:layout_height="229dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="143dp"
        android:layout_marginEnd="93dp"
        android:contentDescription="@string/product_of_the_day_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <TextView
        android:id="@+id/podprice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="44dp"
        android:text="@string/podprice"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/podimage" />

    <TextView
        android:id="@+id/poddesc"
        android:layout_width="324dp"
        android:layout_height="135dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="95dp"
        android:layout_marginEnd="44dp"
        android:text="@string/ipdesc"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/podimage" />

    <Button
        android:id="@+id/addToCartButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="232dp"
        android:layout_marginTop="230dp"
        android:text="@string/buy"
        android:backgroundTint="@color/popocvet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/podimage"/>

    <TextView
        android:textSize="30sp"
        android:textAlignment="center"
        android:id="@+id/ProductOfTheDay"
        android:layout_width="324dp"
        android:layout_height="40dp"
        android:layout_marginStart="42dp"
        android:layout_marginBottom="17dp"
        android:text="@string/product_of_the_day"
        app:layout_constraintBottom_toTopOf="@+id/podimage"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>