<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Phones">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/openMenu"
        style="@style/openMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/openMenu"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <AbsoluteLayout
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/ptitle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="45dp"
                    android:layout_x="0dp"
                    android:layout_y="229dp"
                    android:gravity="center"
                    android:text="@string/phone3000"
                    android:textSize="30sp" />

                <ImageView
                    android:id="@+id/pimage1"
                    android:layout_width="match_parent"
                    android:layout_height="229dp"
                    android:layout_marginStart="92dp"
                    android:layout_marginTop="143dp"
                    android:layout_marginEnd="93dp"
                    android:layout_x="0dp"
                    android:layout_y="0dp"
                    android:contentDescription="@string/product_of_the_day_image"
                    tools:srcCompat="@tools:sample/backgrounds/scenic" />

                <TextView
                    android:id="@+id/pprice1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="44dp"
                    android:layout_marginEnd="44dp"
                    android:layout_x="260dp"
                    android:layout_y="229dp"
                    android:text="@string/podprice"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/pdesc1"
                    android:layout_width="match_parent"
                    android:layout_height="136dp"
                    android:layout_marginStart="43dp"
                    android:layout_marginTop="95dp"
                    android:layout_marginEnd="44dp"
                    android:layout_x="0dp"
                    android:layout_y="269dp"
                    android:text="@string/ipdesc"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/b1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="232dp"
                    android:layout_marginTop="230dp"
                    android:layout_x="191dp"
                    android:layout_y="405dp"
                    android:backgroundTint="@color/krasnocvet"
                    android:text="@string/buy"
                    android:onClick="addToCartPhones"/>
            </AbsoluteLayout>
            <AbsoluteLayout
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/ptitle2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="45dp"
                    android:layout_x="0dp"
                    android:layout_y="229dp"
                    android:gravity="center"
                    android:text="@string/phone2000"
                    android:textSize="30sp" />

                <ImageView
                    android:id="@+id/pimage2"
                    android:layout_width="match_parent"
                    android:layout_height="229dp"
                    android:layout_marginStart="92dp"
                    android:layout_marginTop="143dp"
                    android:layout_marginEnd="93dp"
                    android:layout_x="0dp"
                    android:layout_y="0dp"
                    android:contentDescription="@string/product_of_the_day_image"
                    tools:srcCompat="@tools:sample/backgrounds/scenic" />

                <TextView
                    android:id="@+id/pprice2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="44dp"
                    android:layout_marginEnd="44dp"
                    android:layout_x="260dp"
                    android:layout_y="229dp"
                    android:text="@string/_200"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/pdesc2"
                    android:layout_width="match_parent"
                    android:layout_height="136dp"
                    android:layout_marginStart="43dp"
                    android:layout_marginTop="95dp"
                    android:layout_marginEnd="44dp"
                    android:layout_x="0dp"
                    android:layout_y="269dp"
                    android:text="@string/ipdesc"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/b2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="232dp"
                    android:layout_marginTop="230dp"
                    android:layout_x="191dp"
                    android:layout_y="405dp"
                    android:backgroundTint="@color/krasnocvet"
                    android:text="@string/buy"
                    android:onClick="addToCartPhones"/>
            </AbsoluteLayout>
            <AbsoluteLayout
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/ptitle3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="45dp"
                    android:layout_x="0dp"
                    android:layout_y="229dp"
                    android:gravity="center"
                    android:text="@string/phone1000"
                    android:textSize="30sp" />

                <ImageView
                    android:id="@+id/pimage3"
                    android:layout_width="match_parent"
                    android:layout_height="229dp"
                    android:layout_marginStart="92dp"
                    android:layout_marginTop="143dp"
                    android:layout_marginEnd="93dp"
                    android:layout_x="0dp"
                    android:layout_y="0dp"
                    android:contentDescription="@string/product_of_the_day_image"
                    tools:srcCompat="@tools:sample/backgrounds/scenic" />

                <TextView
                    android:id="@+id/pprice3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="44dp"
                    android:layout_marginEnd="44dp"
                    android:layout_x="260dp"
                    android:layout_y="229dp"
                    android:text="@string/_100"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/pdesc3"
                    android:layout_width="match_parent"
                    android:layout_height="136dp"
                    android:layout_marginStart="43dp"
                    android:layout_marginTop="95dp"
                    android:layout_marginEnd="44dp"
                    android:layout_x="0dp"
                    android:layout_y="269dp"
                    android:text="@string/ipdesc"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/b3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="232dp"
                    android:layout_marginTop="230dp"
                    android:layout_x="191dp"
                    android:layout_y="405dp"
                    android:backgroundTint="@color/krasnocvet"
                    android:text="@string/buy"
                    android:onClick="addToCartPhones"/>
            </AbsoluteLayout>
        </LinearLayout>



    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>